--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Recherche d'offres d'emploi</title>
     <meta charset="utf-8" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon-js.ico" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
+    <script src="script.js" defer></script>
   </head>
 
   <body>
