Update fix chargement css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Recherche d'offres d'emploi</title>
     <meta charset="utf-8" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon-js.ico" />
-    <link rel="stylesheet" href="assets/styles.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -115,5 +114,7 @@
         <p class="info-vide">(Aucune recherche favorite)</p>
       </section>
     </main>
+
+    <script src="scripts/app.js"></script>
   </body>
 </html>
