Update js, try fix CORS error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <section id="section-recherche">
         <div id="bloc-recherche">
           <!-- Champ de recherche -->
-          <input type="text" placeholder="Que cherchez-vous ?" />
+          <input id="champDeRecherche" type="text" placeholder="Que cherchez-vous ?" />
+
           <!-- Boutons -->
           <button id="btn-lancer-recherche" type="button" class="btn_clicable" title="Lancer la recherche">
             <!-- Icone Loupe (provenant de flaticon.com) -->
