Add serveur proxy et CA FONCTIONNE :)

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           Brawlers les plus joués
         </p>
         <ul id="liste-favoris">
-          <li>
+          <!--<li>
             <span title="Cliquer pour relancer la recherche">Grenoble</span>
             <img
               src="images/croix.svg"
@@ -109,10 +109,11 @@
               width="15"
               title="Cliquer pour supprimer le favori"
             />
-          </li>
+          </li>-->
         </ul>
         <p class="info-vide">(Aucune recherche favorite)</p>
       </section>
     </main>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
