Add appel pour leaderbord par brawlers

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
       <section id="section-leaderboard">
         <h2>LeaderBoard</h2>
-        <p>Classement des meilleurs joueurs</p>
+        <article>
+          <p>Classement des meilleurs joueurs avec <span id="nomBrawler"></span></p>
+        </article>
       </section>
 
       <section id="section-modes">
