Add leaderboard des joueurs en fonction des brawlers

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 
       <section id="section-leaderboard">
         <h2>LeaderBoard</h2>
-        <article>
-          <p>Classement des meilleurs joueurs avec <span id="nomBrawler"></span></p>
-        </article>
+          <p>Classement des meilleurs joueurs avec <span id="nomBrawler" style="font-weight: bold;"></span></p>
+        <ul id="leaderBoard-Players-Brawlers"></ul>
       </section>
 
       <section id="section-modes">
