Update generale, ajout du bouton pour afficher la liste des brawler, ...

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a href="#section-recherche">Rechercher</a></li>
-          <li><a href="#section-brawlers">Brawlers</a></li>
+          <li><a href="#section-brawlers" id="btnAffichageListeBrawlers">Brawlers</a></li>
           <li><a href="#section-leaderboard">LeaderBoard</a></li>
           <li><a href="#section-modes">Modes</a></li>
           <li><a href="#section-maps">Maps</a></li>
@@ -48,7 +48,7 @@
       </section>
       <section id="section-brawlers">
         <h2>Brawlers</h2>
-        <p>Liste des Brawlers disponibles et leurs statistiques</p>
+        <p>Liste des Brawlers disponibles.</p>
         <ul id="liste-brawlers">
           <!-- Dynamically filled with search results -->
         </ul>
