--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <ul>
           <li><a href="#section-recherche">Rechercher</a></li>
           <li><a href="#section-brawlers" id="btnAffichageListeBrawlers">Brawlers</a></li>
-          <li><a href="#section-leaderboard">LeaderBoard</a></li>
+          <li><a href="#section-leaderboard" id="btnAffichageLeaderboard">LeaderBoard</a></li>
           <li><a href="#section-modes">Modes</a></li>
-          <li><a href="#section-maps">Maps</a></li>
+          <li><a href="#section-maps" id="btnAffichageRotaMaps">Maps</a></li>
         </ul>
       </nav>
     </header>
