--- a/index.html
+++ b/index.html
@@ -69,14 +69,9 @@
         </ol>
       </section>
 
-      <section id="section-modes">
-        <h2>Modes</h2>
-        <p>Liste des différents modes de jeu disponibles</p>
-      </section>
-
       <section id="section-maps">
-        <h2>Maps</h2>
-        <p>Cartes jouables en mode classé et autres</p>
+        <h2>Maps et modes</h2>
+        <p>Cartes et modes actuellement disponibles dans le jeu</p>
         <ul id="liste-maps">
           <!-- Dynamically filled with search results -->
         </ul>
