--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
           <li><a href="#section-recherche">Rechercher</a></li>
           <li><a href="#section-brawlers" id="btnAffichageListeBrawlers">Brawlers</a></li>
           <li><a href="#section-leaderboard" id="btnAffichageLeaderboard">LeaderBoard</a></li>
-          <li><a href="#section-modes">Modes</a></li>
-          <li><a href="#section-maps" id="btnAffichageRotaMaps">Maps</a></li>
+          <li><a href="#section-maps" id="btnAffichageRotaMaps">Maps et modes</a></li>
         </ul>
       </nav>
     </header>
